组件引用调整

--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -11,7 +11,7 @@
     "vv-ui",
     "theme"
   ],
-  "author": "monkeywang",
+  "author": "wwx",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
