--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "comp": "node build/comp.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
