--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,6 @@
 {
     "name": "{{name}}",
-    "version": "{{version}",
+    "version": "{{version}}",
     "description": "{{description}}",
     "main": "lib/app.js",
     "directories": {
