--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "node build/build.js",
     "svn": "node build/svn.js",
     "comp": "node build/comp.js",
+    "test:mocha": "mocha-webpack --webpack-config build/webpack.test.conf.js --require test/unit/setup.js test/**/*.spec.js --reporter mochawesome",
+    "test:watch": "mocha-webpack --watch --webpack-config build/webpack.test.conf.js --require test/unit/setup.js test/**/*.spec.js --reporter mochawesome",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
@@ -36,6 +38,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.33",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -64,6 +67,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "eventsource-polyfill": "^0.9.6",
+    "expect": "^25.4.0",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
@@ -71,6 +75,8 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -80,7 +86,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^1.1.0",
+    "mochawesome": "^4.1.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
