--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "mocha": "^5.2.0",
     "mocha-webpack": "^1.1.0",
     "mochawesome": "^4.1.0",
+    "node-sass": "^4.12.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -98,6 +99,7 @@
     "postcss-salad": "^2.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
